Modified style, added a background image, added favicons and meta tags

--- a/index.html
+++ b/index.html
@@ -4,32 +4,42 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 	<title>Saikuro</title>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/style.css">
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1b2735">
+	<meta name="msapplication-TileColor" content="#1b2735">
+	<meta name="theme-color" content="#1b2735">
+
+	<!-- Meta -->
+	<meta name="description" content="UwU">
+	<meta name="robots" content="index, follow">
+	<meta name="author" content="Saikuro">
+	<meta property="og:title" content="Saikuro" />
+	<meta property="og:description" content="UwU" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://saikuro.com" />
+	<meta property="og:image" content="https://saikuro.com/favicon-512x512.png" />
+
 	<!-- Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-	<div id='stars'></div>
-	<div id='stars2'></div>
-	<div id='stars3'></div>
-	<div id='title'>
-		<span>
-			( ͡° ͜ʖ ͡°)
-		</span>
+	<div id='stars_1'></div>
+	<div id='stars_2'></div>
+	<div id='stars_3'></div>
+	<div id="background">
+		<div id="title"><span>UwU</span></div>
 	</div>
-
-	<!-- JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" integrity="sha256-0rguYS0qgS6L4qVzANq4kjxPLtvnp5nn2nB5G1lWRv4=" crossorigin="anonymous"></script>
 </body>
 
 </html>
