Added some secret features

--- a/index.html
+++ b/index.html
@@ -34,12 +34,24 @@
 </head>
 
 <body>
+	<!--
+	~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+	##	 ##				 ##   ##
+	##	 ##				 ##   ##
+	##	 ##  \\  /\  //  ##   ##
+	##	 ##	  \\/  \//   ##   ##
+	##### 	   \_/\_/     #####
+	~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+	-->
+
 	<div id='stars_1'></div>
 	<div id='stars_2'></div>
 	<div id='stars_3'></div>
 	<div id="background">
 		<div id="title"><span>UwU</span></div>
 	</div>
+
+	<script src="js/main.js"></script>
 </body>
 
 </html>
